@@ -3,14 +3,15 @@ package com.akademikplus.akademik_plus.service;
 import com.akademikplus.akademik_plus.dto.RoomRequestDTO;
 import com.akademikplus.akademik_plus.dto.RoomResponseDTO;
 import com.akademikplus.akademik_plus.entity.Room;
+import com.akademikplus.akademik_plus.enums.OccupancyStatus;
+import com.akademikplus.akademik_plus.exception.ResourceNotFoundException;
+import com.akademikplus.akademik_plus.exception.ValidationException;
 import com.akademikplus.akademik_plus.mapper.RoomMapper;
 import com.akademikplus.akademik_plus.repository.RoomRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,48 +23,51 @@ public class RoomService {
         return roomRepository.findAll()
                 .stream()
                 .map(roomMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public RoomResponseDTO findById(Long id) {
         Room room = roomRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Room did not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Room not found with id: " + id));
         return roomMapper.toResponse(room);
     }
 
     public RoomResponseDTO create(RoomRequestDTO roomRequestDTO) {
         Room room = roomMapper.toEntity(roomRequestDTO);
         room.setOccupiedPlaces(0);
-        room.setOccupancyStatus("VACANT");
-        Room savedRoom = roomRepository.save(room);
-        return roomMapper.toResponse(savedRoom);
+        room.setOccupancyStatus(OccupancyStatus.VACANT);
+        return roomMapper.toResponse(roomRepository.save(room));
     }
 
     public RoomResponseDTO update(Long id, RoomRequestDTO roomRequestDTO) {
         Room room = roomRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Cannot find room with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Room not found with id: " + id));
 
         if (roomRequestDTO.getTotalPlaces() < room.getOccupiedPlaces()) {
-            throw new RuntimeException("Cannot decrease amount of places to: " + roomRequestDTO.getTotalPlaces()
-            + ", because in room living " + room.getOccupiedPlaces() + " people.");
+            throw new ValidationException(
+                "Cannot decrease total places to " + roomRequestDTO.getTotalPlaces()
+                + " — room currently has " + room.getOccupiedPlaces() + " occupants.");
         }
+
         room.setRoomNumber(roomRequestDTO.getRoomNumber());
         room.setRoomType(roomRequestDTO.getRoomType());
         room.setTotalPlaces(roomRequestDTO.getTotalPlaces());
         room.setFloorNumber(roomRequestDTO.getFloorNumber());
+        room.setRentPrice(roomRequestDTO.getRentPrice());
 
-        if (room.getOccupiedPlaces() >= room.getTotalPlaces()) {
-            room.setOccupancyStatus("FULL");
-        } else {
-            room.setOccupancyStatus("VACANT");
-        }
+        room.setOccupancyStatus(
+            room.getOccupiedPlaces() >= room.getTotalPlaces()
+                ? OccupancyStatus.FULL
+                : OccupancyStatus.VACANT
+        );
 
-        Room updatedRoom = roomRepository.save(room);
-
-        return roomMapper.toResponse(updatedRoom);
+        return roomMapper.toResponse(roomRepository.save(room));
     }
 
     public void delete(Long id) {
+        if (!roomRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Room not found with id: " + id);
+        }
         roomRepository.deleteById(id);
     }
 }
